src/postcss/mimo/mimo-theme.css
/* ================
// Variables
// ============= */

$m1: #7986CB;
$m2: #E8EAF6;


/* ================
// Type
// ============= */

.mimo-theme {
  font-family: 'Quicksand';
  color: $m1;

  body {
    font-size: em(18);
    line-height: nu(28, 18);
  }

  h2,
  h4 {
    font-weight: 700;
  }

  h2 {
    display: inline-block;
    border-bottom: rem(3) solid currentColor;
    margin: 0;
    padding-bottom: em(6, 18);
    font-size: em(24, 18);

    @mixin media $tiny {
      font-size: em(34, 18);
      line-height: nu(36, 34);
    }

  }

  h4 {
    margin: 0 0 rem(10);
    font-size: em(22, 18);
    line-height: em(24, 22);

    @mixin media $tiny {
      font-size: em(26, 18);
    }

  }

  .lead {
    margin-bottom: rem(40);

    @mixin media $tiny {
      font-size: em(20, 18);
    }

  }

}


/* ================
// HTML
// ============= */

.mimo-theme {

  a {
    color: inherit;
  }

  p {
    margin: rem(10) 0;
  }

}


/* ================
// Icons
// ============= */

.mimo-theme {

  .symbol {
    height: em(20, 18);
    width: em(20, 18);
    fill: currentColor;
  }

}


/* ================
// Regions
// ============= */

.mimo-theme {

  .site-header {
    @mixin compartment 1040;
    padding: em(20, 18);

    &:after {
      @mixin clearfix;
    }

  }

  .site-footer {
    background: $m2;
    padding: em(20, 18);
  }

}


/* ================
// Address
// ============= */

.mimo-theme {

  .vcard {
    @mixin compartment 1000;
  }

}


/* ================
// Logo
// ============= */

.mimo-theme {

  .site-logo {
    height: em(64, 18);
    max-width: em(440, 18);
    width: 100%;
    padding-left: em(60, 18);

    @mixin media $aldnoah {
      float: left;
      max-width: em(380, 18);
      padding-left: 0;
    }

  }

    .symbol-logo {
      display: block;
      height: 100%;
      width: 100%;
      fill: $m1;
    }

}


/* ================
// Drawer
// ============= */

.mimo-theme {

  .drawer-trigger {
    position: absolute;
    top: 50%;
    left: em(20, 16);
    font-size: em(16, 18);
    background: $m2;
    border: em(2, 16) solid $m1;
    border-radius: 100%;
    color: $m1;
    transform: translate(0, -50%);
    transition:
      background .25s,
      color .25s;

    @mixin media $aldnoah {
      display: none;
    }

    &:before,
    &:after {
      height: em(3, 16);
    }

    &:focus,
    &:hover {
      background: $m1;
      color: $m2;
    }

  }

  .drawer {
    padding: em(20, 18) em(10, 18);
    background: $m2;
    color: $m1;

    @mixin media $aldnoah {
      @mixin reset-drawer;
      float: right;
      width: auto;
      padding: 0;
      background: none;
    }

  }

}


/* ================
// Navigation
// ============= */

.mimo-theme {

  .main-nav {

    li {

      @mixin media $aldnoah {
        display: inline-block;
      }

    }

      a {
        display: block;
        padding: em(4, 18) em(10, 18);
        font-weight: 700;
        text-decoration: none;
        border-radius: em(10, 18);
        color: inherit;
        transition:
          background .25s,
          box-shadow .25s,
          color .25s;

        @mixin media $aldnoah {
          padding: em(18, 18) em(20, 18);
          color: $m1;
        }

        &:focus,
        &:hover {
          background: $m2;
          box-shadow: inset 0 0 0 em(4, 18) $m1;
          color: $m1;
        }

      }

  }

}


/* ================
// Section
// ============= */

.mimo-theme {

  .section {
    color: $m1;

    &:nth-of-type(odd) {
      background: $m1;
      color: $m2;
    }

  }

}


/* ================
// Grid
// ============= */

.mimo-theme {

  .grid {
    margin: 0 em(-20, 18);
  }

    .column {
      margin-bottom: em(20, 18);
      padding: 0 em(20, 18);
    }

    @mixin media $big {

      .column-big {
        create-grid: 12;
      }

    }

}


/* ================
// Code
// ============= */

.mimo-theme {

  code {
    display: block;
    overflow-x: auto;
    padding: em(20, 18);
    background: $m2;
    border-radius: em(10, 18);
    color: $m1;
  }

}


/* ================
// Slideshow
// ============= */

.mimo-theme {

  .sail-slide {
    height: em(220, 18);
    margin-bottom: em(20, 18);
    padding: em(60, 18) em(20, 18);
    background: $m2;
    border-radius: em(20, 35);
    color: $m1;

    @mixin media $medium {
      padding-right: em(40, 18);
      padding-left: em(40, 18);
    }

    @mixin media $large {
      height: auto;
    }

    @media print {
      padding: em(10, 35);
    }

    &:nth-of-type(even) {
      background: $m1;
      color: $m2;
    }

  }

  .sail-controls {
    margin-bottom: em(10, 18);
    text-align: center;
  }

    .sail-control {
      border: 0;
      padding: 0 em(10, 35);
      font-size: em(35, 18);
      background: none;
      color: inherit;
      transition:
        opacity .25s,
        transform .25s;

      &:not([disabled]):focus,
      &:not([disabled]):hover {
        transform: scale(1.25);
      }

      &[disabled] {
        opacity: .25;
      }

    }

      .symbol-sail {
        font-size: 85%;
      }

  .sail-pages {
    text-align: center;
  }

    .sail-page {
      height: em(20, 18);
      width: em(20, 18);
      background: none;
      border: em(3, 18) solid;
      margin: 0 em(6, 18);
      border-radius: 100%;
      color: currentColor;
      transition: background .25s;

      &:focus,
      &:hover {
        background: $m2;
      }

      &-active {
        background: currentColor;

        &:focus,
        &:hover {
          background: currentColor;
        }

      }

    }

}


/* ================
// Reasons
// ============= */

.mimo-theme {

  .reason {
    position: absolute;
    top: 50%;
    left: 0;
    width: 100%;
    padding: 0 em(20, 18);
    transform: translate(0, -50%);

    @mixin media $large {
      position: relative;
      top: 0;
      padding: 0;
      transform: none;
    }
  }

  .reason-bubble {
    display: none;
    vertical-align: top;
    padding-right: em(20, 18);

    @mixin media $mini {
      display: table-cell;
    }

  }

    .symbol-reason {
      height: em(38, 18);
      width: em(38, 18);
    }

  .reason-details {
    display: table-cell;
    vertical-align: top;
  }

}


/* ================
// Lantern
// ============= */

.mimo-theme {

  .lantern-light {
    border-radius: em(20, 18);
  }

  .lantern {
    padding: em(40, 18);
    padding-bottom: em(60, 18);
    background: rgba(255, 255, 255, .75);
  }

    .lantern-content {

      &:after {
        position: fixed;
        bottom: 0;
        left: 0;
        width: 100%;
        padding: em(4, 18) em(10, 18);
        text-align: center;
        background: $m1;
        content: attr(title);
      }

    }

      .lantern-holder {
        border: em(5, 18) solid #fff;
        border-radius: em(20, 18);
      }

      .lantern-control {
        height: em(25);
        width: em(25);
        border: 0;
        background: $m1;
        border-radius: 100%;
        color: $m2;
        transition:
          background .25s,
          box-shadow .25s,
          color .25s;

        &:focus,
        &:hover {
          background: $m2;
          box-shadow: 0 0 0 em(2) $m1;
          color: $m1;
        }

      }

        .symbol-lantern {
          position: absolute;
          top: 50%;
          left: 50%;
          display: block;
          transform: translate(-50%, -50%);
        }

      .lantern-previous {
        transform: translate(calc(-100% - em(5, 18)), -50%);
      }

      .lantern-next {
        transform: translate(calc(100% + em(5, 18)), -50%);
      }

}


/* ================
// Harmonica
// ============= */

.mimo-theme {

  .harmonica-header {
    border: 0;
    margin: 0 0 em(20, 18);
    padding: em(9, 18) em(20, 18);
    text-align: left;
    background: $m2;
    border-radius: em(50, 18);
    color: inherit;
    transition: box-shadow .25s;

    @mixin media $harmonica-view {
      text-align: center;
      border-radius: 0;
    }

    &:first-of-type {

      @mixin media $harmonica-view {
        border-radius: em(30, 18) 0 0 em(30, 18);
      }

    }

    &:last-of-type {

      @mixin media $harmonica-view {
        border-radius: 0 em(30, 18) em(30, 18) 0;
      }

    }

    &:focus,
    &:hover {
      box-shadow: inset 0 0 0 em(4, 18) $m1;
    }

    &-active {
      background: $m1;
      color: $m2;
    }

  }

  .harmonica-content {
    margin-bottom: em(20);
  }

}


/* ================
// Action Links
// ============= */

.mimo-theme {

  .action-links {
    @mixin list-reset;
  }

    .action-link-item {
      display: inline-block;
      margin-right: em(4, 18);
      margin-bottom: em(10, 18);
    }

      .action-link {
        display: inline-block;
        padding: em(10, 18) em(20, 18);
        font-weight: 700;
        text-decoration: none;
        border-radius: em(50, 18);
        transition:
          background .25s,
          box-shadow .25s,
          color .25s;

        @mixin media $medium {
          display: inline-block;
        }

        &-github {
          background: $m2;
          color: $m1;

          &:focus,
          &:hover {
            background: $m1;
            box-shadow: inset 0 0 0 em(4, 18) $m2;
            color: $m2;
          }

        }

        &-share {
          background: $m1;
          color: $m2;

          &:focus,
          &:hover {
            background: $m2;
            box-shadow: inset 0 0 0 em(4, 18) $m1;
            color: $m1;
          }

        }

      }

        .symbol-action {
          display: inline-block;
          vertical-align: middle;
          height: em(26, 18);
          width: em(26, 18);
          margin-right: em(5, 18);
        }

        .action-link-label {
          display: inline-block;
          vertical-align: middle;
        }

}

